--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.3",
     "mongoose": "^5.0.14",
     "morgan": "^1.9.0",
+    "react-animate-on-scroll": "^2.1.4",
     "spotify-web-api-js": "^0.23.0"
   }
 }
